<resources>
    <string name="app_name">Get It</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="login">تسجيل دخول</string>
    <string name="sorry">عذراُ</string>
    <string name="table">طاولة</string>
    <string name="discard">الغاء</string>
    <string name="location_settings">اعدادات الموقع</string>
    <string name="settings">الاعدادات</string>
    <string name="gps_message_body_3">التطبيق يحتاج الى تغيير وضع الموقع إلى دقة عالية</string>
    <string name="gps_message_body_4">App Needs to Change Location Mode to High Accuracy</string>
    <string name="gps_message_body_2">التطبيق يحتاج الى تفعيل GPS من اعدادات الجهاز!</string>
    <string name="gps_message_body">خدمة GPS غير مفعلة</string>
    <string name="table_name">رقم الطاولة</string>
    <string name="enter_table_name">ادخل رقم الطاولة</string>
    <string name="choose_table_q" formatted="false">هل تريد تأكيد حجز طاولة رقم %s</string>
    <string name="connection_error">خطأ في الاتصال!</string>
    <string name="some_error">حدث خطأ ما !</string>
    <string name="no_internet">تأكد من اتصالك بالانترنت!</string>
    <string name="empty_table_name">الرجاء ادخال رقم الطاولة</string>
    <string name="username">الإسم الشخصي</string>
    <string name="password">كلمة المرور</string>
    <string name="login_">دخول</string>
    <string name="empty_username">الرجاء ادخال رقم الموبايل</string>
    <string name="empty_password">الرجاء ادخال كلمة المرور</string>
    <string name="title_activity_cats">قائمة الطعام</string>
    <string name="no_result">لا يوجد نتائج</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">الاعدادات</string>
    <string name="order">عرض الطلب</string>
    <string name="my_order">طلباتي</string>
    <string name="title_activity_cat">CatActivity</string>
    <string name="more">المزيد</string>
    <string name="meal_contents"> المكونات الاختيارية</string>
    <string name="price">السعر</string>
    <string name="rate">التقييم</string>
    <string name="cart">الطلبية</string>
    <string name="complete_order">ارسال الطلب</string>
    <string name="cancel_order">الغاء الطلب</string>
    <string name="cancel">الغاء</string>
    <string name="confirm">تأكيد</string>
    <string name="delete_cart_item_message">هل تريد تأكيد حذف هذا العنصر ؟</string>
    <string name="sending">جار الارسال</string>
    <string name="sent_success">تم الارسال</string>
    <string name="meal_activity">تفاصيل الوجبة</string>
    <string name="total">المجموع</string>
    <string name="add_to_order">إضافة الى السلة</string>
    <string name="order_sent">تم ارسال الطلب بنجاح</string>
    <string name="Order_Status">حالة الطلب</string>
    <string name="table_number" formatted="false">طاولة %s</string>
    <string name="title_activity_tables">قائمة الطاولات</string>
    <string name="available">  متاح   </string>
    <string name="busy">مشغول</string>
    <string name="closed">مغلق</string>
    <string name="reseved">محجوز</string>
    <string name="primary_meal_contents"> المكونات الاساسية</string>
    <string name="added_successfully">تم الاضافة للطلب</string>
    <string name="empty_cart">السلة فارغة</string>
    <string name="retry">حاول مرة أخرى</string>
    <string name="forget_password">نسيت كلمة المرور؟</string>
    <string name="title_activity_main3">طلبات الزبائن</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="quantity">العدد </string>
    <string name="logout">تسجيل الخروج</string>
    <string name="forget_password_msg">استعادة كلمة المرور</string>
    <string name="email">البريد الالكتروني</string>
    <string name="send">إرسال</string>
    <string name="empty_email">الرجاء إدخال البريد الالكتروني</string>
    <string name="email_sent_successfully">تم ارسال  رسالة الى بريدك الالكتروني تحتوي كلمة المرور الجديدة</string>
    <string name="invalid_email">بريد غير صالح</string>
    <string name="login_pro">تسجيل الدخول PRO</string>
    <string name="login_lite">تسجيل الدخول لايت</string>
    <string name="save">حفظ</string>
    <string name="api_link">رابط السيرفر</string>
    <string name="device_no">رقم الجهاز</string>
    <string name="order_confirm">شكرا على طلبكم ! قم با ستدعاء النادل (الموظف) لتأكيد الطلب.</string>
    <string name="wrong_pass">كلمة المرور خاطئة</string>
    <string name="enter_pass_to_action">عليك إدخال كلمة المرور للتأكيد</string>
    <string name="change_table">تغيير الطاولة</string>
    <string name="order_confirm_check">طلب كلمة المرور عند تاكيد الطلب</string>
    <string name="reserved_table">الطاولة محجوزة ,هل تود اضافة طلبات عليها ؟</string>
    <string name="return_to_app">عودة للتطبيق</string>
    <string name="as_nadel">تحديد كنادل</string>
    <string name="confirm_orders">تلقي تأكيد الطلبيات</string>
    <string name="waiting_order">في الانتظار</string>
    <string name="confirmed">تم التأكيد</string>
    <string name="order_confirmed">تم تأكيد الطلب بنجاح</string>
    <string name="order_canceled">تم الغاء الطلب </string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="order_activity">تفاصيل الطلب</string>
    <string name="add_meal_to_order">إضافة وجبات جديدة للطلب</string>
    <string name="close_app">إغلاق التطبيق</string>
    <string name="canceled_successfully">تم الالغاء بنجاح</string>
    <string name="cancel_order_msg">هل تريد تأكيد الغاء هذا الطلب؟</string>
    <string name="confirm_order_msg">هل تريد تأكيد الطلب؟</string>
    <string name="login_qr">مسح QR code</string>
    <string name="new_call">طلب استدعاء جديد</string>
    <string name="new_call_table">طلب استدعاء من %s</string>
    <string name="lock_app">منع  من الخروج من التطبيق</string>
    <string name="new_order">تم استلام طلب جديد</string>
    <string name="new_order_title">طلب جديد</string>
    <string name="discover">جرب MenuApp</string>
    <string name="about_app">حول التطبيق</string>
    <string name="about_rest">نبذة عن المطعم</string>
    <string name="title_activity_resturants">قائمة المهن</string>
    <string name="discover_resturants">تعرف على المهن</string>
    <string name="search">بحث</string>
    <string name="enter_search_word">أدخل كلمة البحث</string>
    <string name="dialog_ok">حسنا</string>
    <string name="LOADING">جار التحميل...</string>
    <string name="english">الانجليزية</string>
    <string name="arabic">العربية</string>
    <string name="change_language">اختر لغة التطبيق</string>
    <string name="change_lang">تغيير اللغة</string>
    <string name="settings_saved">تم حفظ الاعدادات</string>
    <string name="next">التالي</string>
    <string name="settings_case">من هنا باممكانك عرض اعدادات التطبيق و استدعاء النادل من خلال زر الجرس و رؤية اسم الطاولة التي تحجزها.</string>
    <string name="meals_case">هنا قائمة الوجبات تتضمن اسم و سعر و كمية الوجبة المراد طلبها</string>
    <string name="inc_qty_case">من هنا بامكانك زيادة الكمية التي ترغب بطلبها.</string>
    <string name="dec_qty_case">من هنا بامكانك تقليل الكمية التي ترغب بطلبها.</string>
    <string name="add_to_cart_case">من هنا بامكانك اضافة التي ترغب بطلبها للسلة</string>
    <string name="view_cart_case">هنا بامكانك تصفح  الوجبات  التي قمت باضافتها</string>
    <string name="without">بدون</string>
    <string name="little">قليل</string>
    <string name="middle">وسط</string>
    <string name="much">كثير</string>
    <string name="wrong_user_pass">خطأ في اسم المستخدم او كلمة المرور</string>
    <string name="categories">قائمة الطعام</string>
    <string name="invalid_link">رابط غير صحيح</string>
    <string name="request_pass_tables">طلب كلمة المرور عند تغيير الطاولة</string>
    <string name="total2">الإجمالي</string>
    <string name="fee">قيمة الخصم</string>
    <string name="direct_confirmation">تأكيد طلبيات النادل مباشرة</string>
    <string name="new_call_restuarnt">تم تجهيز الطلبية</string>
    <string name="new_call_table_restaurant">تم تجهيز الوجبات للطاولة : %s</string>
    <string name="mobile">أدخل رقم المحمول</string>
    <string name="confirm_pass">تأكيد كلمة المرور</string>
    <string name="Sign_Up">انشاء حساب جديد</string>
    <string name="enter_fields">الرجاء ادخال جميع الحقول</string>
    <string name="password_not_matching">كلمة المرور ليست مطابقة</string>
    <string name="email_wrong">البريد الإلكتروني خاطئ</string>
    <string name="home">الرئيسية</string>
    <string name="welcome">أهلاً بك </string>
    <string name="catgri">قائمة الطعام</string>
    <string name="cart_order">سلة الطلبات</string>
    <string name="contactus">دردشة مع المتجر</string>
    <string name="notfcation">اشعارات</string>
    <string name="order_traking">تتبع الطلب</string>
    <string name="prfile">الحساب الشخصي</string>
    <string name="fullname">أدخل اسمك</string>
    <string name="edite">تعديل</string>
    <string name="chnge_pass">تعديل كلمة المرور</string>
    <string name="newpass"> كلمة المرور الجديدة</string>
    <string name="Session">انتهت صلاحية الجلسة، يرجى تسجيل الدخول</string>
    <string name="chechpass">كلمة المرور القديمة خاطئة</string>
    <string name="pass_privice"> كلمة المرور القديمة</string>
    <string name="adress">اسم الشارع والعمارة</string>
    <string name="writenow">اكتب هنا ..</string>
    <string name="empty_msg">الحقل فارغ</string>
    <string name="jobs">الوظائف</string>
    <string name="address_confirm">الرجاء التأكد من العنوان</string>
    <string name="cancel_adress">لاستكمال الطلب، يرجى ادخال العنوان</string>
    <string name="city">المدينة</string>
    <string name="region">العنوان</string>
    <string name="comment">ادخل ملاحظاتك على العمل</string>
    <string name="rests">المهن</string>
    <string name="stat_open">مفتوح</string>
    <string name="stat_close">مغلق</string>
    <string name="msg_rest">المتجر مغلق حالياَ، يرجى المحاولة في وقت لاحق</string>
    <string name="cuntry">الدولة</string>
    <string name="wrong">عذراً</string>
    <string name="text_revew">ارسل تعليق</string>
    <string name="name_rust">اسم المتجر</string>
    <string name="name_rust_owner">اسم صاحب المطعم</string>
    <string name="name_wajba">اسم الوجبة</string>
    <string name="meal_conten">وصف الوجبة</string>
    <string name="youtube">رابط يوتيوب</string>
    <string name="add_wajba">اضافة وجبة</string>
    <string name="homemap">المهن بالخريطة</string>
    <string name="admain">متجر</string>
    <string name="user">مستخدم</string>
    <string name="delivery">سائق</string>
    <string name="virviction">يرجى ادخال رمز التفعيل الذي تم ارساله الى جوالك

</string>
    <string name="active_code">تفعيل الحساب</string>
    <string name="code">ادخل رمز التفعيل</string>
    <string name="actving">تفعيل</string>
    <string name="not_actve">Account not activated</string>
    <string name="activated">تم تفعيل الحساب، يمكنك استكمال التسجيل</string>
    <string name="received_from_restaurant">استلام الطلب من المطعم</string>
    <string name="Order_ladder">تسليم الطلب للزبون</string>
    <string name="num_order">رقم الطلبية : </string>
    <string name="divlar">الدليفري</string>
    <string name="custmor">الزبون</string>
    <string name="contents">المكونات: </string>
    <string name="nededd_quntty">عليك تحديد كمية العنصر</string>
    <string name="plase_need_map">الرجاء الانتظار حتى يتم تعيين احداثيات المكان</string>
    <string name="dist"> يبعد  </string>
    <string name="KM"> كيلو متر </string>
    <string name="radio_male">ذكر</string>
    <string name="radio_female">أنثى</string>
    <string name="age">العمر</string>
    <string name="sex">الجنس</string>
    <string name="virvictionc">اذا تأخرت رسالة التفعيل يمكنك تصفح المهن ريثما تصل</string>
    <string name="entre_address">أدخل عنوانك كاملاً</string>
    <string name="skip">تصفح دون تسجيل دخول</string>
</resources>