<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:id="@+id/hgh">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cccc">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_title"
            android:text="@string/active_code"
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="1dp"
            android:id="@+id/view"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/virviction"
            android:textColor="#000000"
            android:textSize="12dp"

            android:layout_marginStart= "15dp"
            android:layout_marginEnd="15dp"

            android:layout_marginTop="10dp" />

        <EditText
                android:layout_width="match_parent"
            android:layout_height="35dp"
                android:id="@+id/codeact"
            android:layout_below="@+id/PassUseractiv"
                android:layout_gravity="center_horizontal"
            android:layout_marginStart= "15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
                android:hint="@string/code"
                android:background="@drawable/border_grd"
                android:textColor="#6a6e7c"
                android:textColorHint="#6a6e7c"
            android:inputType="numberDecimal"
            android:textSize="12dp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/virvictionc"
            android:textColor="#000000"
            android:textSize="12dp"

            android:layout_marginStart= "15dp"
            android:layout_marginEnd="15dp"

            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"


            android:layout_marginBottom="30dp" >
            <Button
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:text="@string/actving"
                android:layout_below="@+id/codeact"

                android:layout_weight="1"
                android:id="@+id/activete"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="13dp"
                android:background="@drawable/black_raduis_25_border_background"              android:layout_marginStart= "15dp"
                android:layout_marginEnd="15dp"
                android:textColor="#fff"
               />
            <Button
                android:layout_width="0dp"
                android:layout_height="35dp"
                 android:text="@string/skip"
                android:layout_below="@+id/codeact"
                android:layout_weight="1"

                android:id="@+id/skip"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="13dp"
                android:background="@drawable/black_raduis_25_border_background"
                android:layout_marginStart= "15dp"
                android:layout_marginEnd="15dp"
                android:textColor="#fff"
               />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>