<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">
<RelativeLayout

    android:layout_width="match_parent"
    android:background="@color/backFraem"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".activities.SplashActivity">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="10dp"

        android:layout_gravity="center_vertical|center_horizontal"

        android:gravity="center_horizontal"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffbf02"
            android:text="إنشاء حساب جديد"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#656565"
            android:text="كن عضواً جديداً معنا, أهلاً وسهلاً بك"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/empity_border_radis_8"

            android:padding="@dimen/_3sdp"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="-8dp"
                android:textSize="@dimen/_12sdp"
                android:text="مستخدم"
                android:id="@+id/user"
                android:textColor="@color/white"
                android:background="@drawable/bacbluel"
                />

            <Button
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/_12sdp"
                android:text="سـائق"
                android:id="@+id/delivery"
                android:textColor="@color/colorPrimary"
                android:background="#0000"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_grd"
            android:drawablePadding="5dp"
            android:drawableEnd="@drawable/user"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:textColor="#000000"
            android:textColorHint="#c9c9c9"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"

            android:textSize="12dp"
            />
        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:background="@drawable/border_grd"
            android:drawablePadding="5dp"
            android:hint="@string/mobile"
            android:inputType="number"
            android:drawableEnd="@drawable/mobile"

            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textColorHint="#c9c9c9"
            android:textSize="12dp"
            />

        <EditText
            android:id="@+id/id_no"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="@dimen/_10sdp"
            android:visibility="gone"
            android:paddingStart="@dimen/_10sdp"
            android:background="@drawable/border_grd"
            android:drawablePadding="5dp"
            android:hint="أدخل رقم الهوية"
            android:inputType="number"
            android:drawableEnd="@drawable/id_no"

            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textColorHint="#c9c9c9"
            android:textSize="12dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/contry"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_spinner"
                android:drawablePadding="5dp"
                android:paddingEnd="25dp"
                android:spinnerMode="dropdown"
                android:textColor="#000000"
                android:textSize="11dp" />

            <Spinner
                android:id="@+id/cityy"
                android:layout_width="0dp"
                android:layout_weight="1"

                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_spinner"
                android:drawablePadding="5dp"
                android:paddingEnd="25dp"
                android:spinnerMode="dropdown"
                android:textColor="#000000"
                android:textSize="11dp" />


        </LinearLayout>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_grd"
            android:drawablePadding="5dp"
            android:drawableEnd="@drawable/address"
            android:gravity="center_vertical"
            android:hint="@string/entre_address"
            android:textColor="#000000"
            android:textColorHint="#c9c9c9"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"

            android:textSize="12dp"
            />

        <EditText
            android:id="@+id/PassUser"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_grd"
            android:drawablePadding="5dp"
            android:ems="10"
            android:gravity="start|center_vertical"
            android:hint="@string/password"

            android:drawableEnd="@drawable/pass"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/_10sdp"
            android:textAlignment="gravity"
            android:textColor="#000000"
            android:paddingStart="@dimen/_10sdp"


            android:textColorHint="#c9c9c9"
            android:textSize="12dp" />


        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:layout_marginEnd="@dimen/_10sdp"
                android:button="@drawable/check_circle"
                android:paddingStart="@dimen/_20sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="#b0b0b0"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:button="@drawable/check_circle"
                android:paddingStart="@dimen/_20sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="#b0b0b0"
                android:text="@string/radio_female" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/type_car"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
android:visibility="gone"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <RadioButton
                android:id="@+id/motor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:button="@drawable/check_motor"
                android:textSize="@dimen/_15sdp"
                android:textColor="#b0b0b0"
                android:checked="true" />

            <RadioButton
                android:id="@+id/car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:button="@drawable/check_car"
                android:textSize="@dimen/_15sdp"
                android:textColor="#b0b0b0"
                 />

            <RadioButton
                android:id="@+id/truck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:button="@drawable/check_truck"
                android:textSize="@dimen/_15sdp"
                android:textColor="#b0b0b0"
               />

        </RadioGroup>


        <ps.getit.app.Custom.CustomMapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:fastScrollEnabled="true"

android:layout_marginTop="@dimen/_10sdp"
            map:uiCompass="true"
            map:zOrderOnTop="true"
            map:uiZoomControls="true"/>
        <Button
            android:id="@+id/go_to_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bac_yaowll"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="start"

            android:textColor="@color/white"
            android:text="تسجيل جديد"
            android:layout_marginStart="20dp"/>



        <Button
            android:id="@+id/reg_frind"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bacbluel"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:text="تسجيل عن طريق ضديق"
            android:layout_marginStart="20dp"/>








        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:layout_marginTop="15dp"

            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b0b0b0"
                android:text="هل تمتلك حساب  ؟"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textStyle="bold"
                android:textSize="@dimen/_11sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_gravity="center_horizontal"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="تسجيل جديد"
                android:id="@+id/Reg_new"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/_11sdp"
                android:layout_marginBottom="@dimen/_5sdp"

                />

        </LinearLayout>

    </LinearLayout>







</RelativeLayout>
</ScrollView>